# morpheus

./: .gitignore  CMakeLists.txt  Makefile  README.md  SKILL.md  conanfile.py
cmake/: build-stemlib.sh
src/includes/: gkdict.h
